--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
             </div>
             <div class="footer-info-item">
                 <h2 class="footer-info-title">Horario</h2>
-                <p class="footer-info-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, quae.</p>
+                <p class="footer-info-text">9:00am-6:00pm Luns a Viernes</p>
             </div>
     </footer>
 </body>
