Actualización del logo

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <title>Pasteleria Yuumi</title>
 </head>
 <body>
-    <section class="banner">
+    <section class="banner" style="background-image: url('src/img/banner2.png');">
         <nav class="fill">
             <ul class="horizontal">
                 <li><img class="logo" src="src/img/logo.png" alt=""></li>
