--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <section class="banner" style="background-image: url('src/img/banner2.png');">
         <nav class="fill">
             <ul class="horizontal">
-                <li><img class="logo" src="src/img/logo.png" alt=""></li>
+                <li><img class="logo" src="./src/img/logo.png" alt=""></li>
                 <li><a href="src/view/admon.html">Administración</a></li>
                 <li><a href="src/view/pedido.html">Pedido</a></li>
                 <li><a href="./">Menú</a></li>
